@@ -25,8 +25,6 @@ import io.micronaut.retry.annotation.RetryPredicate;
 import io.micronaut.retry.annotation.Retryable;
 
 import java.time.Duration;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -44,7 +42,7 @@ class AnnotationRetryStateBuilder implements RetryStateBuilder {
     private static final String INCLUDES = "includes";
     private static final String EXCLUDES = "excludes";
     private static final String PREDICATE = "predicate";
-    private static final String CAPTUREDEXCEPTION = "capturedException";
+    private static final String CAPTURED_EXCEPTION = "capturedException";
     private static final int DEFAULT_RETRY_ATTEMPTS = 3;
 
     private final AnnotationMetadata annotationMetadata;
@@ -61,7 +59,7 @@ class AnnotationRetryStateBuilder implements RetryStateBuilder {
     @Override
     public RetryState build() {
         AnnotationValue<Retryable> retry = annotationMetadata.findAnnotation(Retryable.class)
-                                                             .orElseThrow(() -> new IllegalStateException("Missing @Retryable annotation"));
+            .orElseThrow(() -> new IllegalStateException("Missing @Retryable annotation"));
         int attempts = retry.intValue(ATTEMPTS).orElse(DEFAULT_RETRY_ATTEMPTS);
         Duration delay = retry.get(DELAY, Duration.class).orElse(Duration.ofSeconds(1));
         @SuppressWarnings("unchecked")
@@ -69,8 +67,8 @@ class AnnotationRetryStateBuilder implements RetryStateBuilder {
         RetryPredicate predicate = createPredicate(predicateClass, retry);
         @SuppressWarnings("unchecked")
         Class<? extends RuntimeException> capturedException = (Class<? extends RuntimeException>) retry
-                                            .classValue(CAPTUREDEXCEPTION)
-                                            .orElse(RuntimeException.class);
+            .classValue(CAPTURED_EXCEPTION)
+            .orElse(RuntimeException.class);
 
         return new SimpleRetry(
             attempts,
@@ -95,6 +93,6 @@ class AnnotationRetryStateBuilder implements RetryStateBuilder {
     @SuppressWarnings({"unchecked", "rawtypes"})
     private static List<Class<? extends Throwable>> resolveIncludes(AnnotationValue<Retryable> retry, String includes) {
         Class<?>[] values = retry.classValues(includes);
-        return (List) Collections.unmodifiableList(Arrays.asList(values));
+        return (List) List.of(values);
     }
 }
